--- a/CwngaIOSStudy/Src/Cells/CollectionViewCell.xib
+++ b/CwngaIOSStudy/Src/Cells/CollectionViewCell.xib
@@ -22,6 +22,7 @@
                     </label>
                 </subviews>
             </view>
+            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
             <constraints>
                 <constraint firstItem="74u-tQ-DXB" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="10" id="BtH-Y8-Hxo"/>
                 <constraint firstAttribute="trailing" secondItem="74u-tQ-DXB" secondAttribute="trailing" constant="10" id="Oun-1c-5Vv"/>
